--- a/index.html
+++ b/index.html
@@ -128,43 +128,42 @@
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2017</span>
+    					<h2>STAGE OBSERVATION TROISIÈME</h2>
+    					<span class="position">CréartStudio</span>
+    					<p class="mt-4">Société de création de jeux vidéo à Tours</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2020-2022</span>
+    					<h2>ENCADREMENT ET ANIMATION </h2>
+    					<span class="position">PB86</span>
+    					<p class="mt-4">Stages de perfectionnement jeunes au PB86 pendant les vacances scolaires</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2023</span>
+    					<h2>STAGE DEVELOPPEUR</h2>
+    					<span class="position">SOS DATA</span>
+    					<p class="mt-4">Développement application de gestion de base de données </p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2023-2024</span>
+    					<h2>Art &amp; Statisticien</h2>
+    					<span class="position">PB86</span>
+    					<p class="mt-4">Prise de données en temps réel lors des matchs professionnels du Poitiers Basket 86</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
+    					<span class="date">2023-2024</span>
+    					<h2>Employé de restauration</h2>
+    					<span class="position">Burger King</span>
+
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2018</span>
-    					<h2>UI/UX Designer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2024</span>
+    					<h2>STAGE DEVELOPPEUR</h2>
+    					<span class="position">Algos</span>
+    					<p class="mt-4">développement d’applications web et de site web, formation IA ( Minevia )</p>
     				</div>
     			</div>
     		</div>
