--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     					<span class="date">2023-2024</span>
     					<h2>Employé de restauration</h2>
     					<span class="position">Burger King</span>
+					</div>
 
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2024</span>
