--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>CV</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projets</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Certifications</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Projets</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -168,7 +168,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="#" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -178,9 +178,8 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Projets</h1>
-            <h2 class="mb-4">Mes Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+          	<h1 class="big big-2">Certifications</h1>
+            <h2 class="mb-4">Mes Certifications</h2>
           </div>
         </div>
     		<div class="row">
@@ -368,8 +367,7 @@
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
-            <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">Contactez moi</h2>
           </div>
         </div>
 
@@ -379,8 +377,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
           		</div>
-          		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+          		<h3 class="mb-4">Addresse</h3>
+	            <p>6 rue des davitaires 86550 Mignaloux-beauvoir</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -388,8 +386,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+          		<h3 class="mb-4">Numéro de téléphone</h3>
+	            <p><a href="tel://1234567920">+336 50 85 50 87</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -397,8 +395,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
           		</div>
-          		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+          		<h3 class="mb-4">Adresse Email</h3>
+	            <p><a href="mailto:info@yoursite.com">thielinotis@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -406,8 +404,8 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+          		<h3 class="mb-4">Mon site</h3>
+	            <p><a href="#">https://www.portfolio-otis.fr/</a></p>
 	          </div>
           </div>
         </div>
@@ -416,13 +414,13 @@
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Nom">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
+                <input type="text" class="form-control" placeholder="Email">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
+                <input type="text" class="form-control" placeholder="Sujet">
               </div>
               <div class="form-group">
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
@@ -435,7 +433,7 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg);"></div>
+          	<div class="img" style="background-image: url(images/otis_abdel_stat.JPG);"></div>
           </div>
         </div>
       </div>
@@ -447,12 +445,11 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">Mes réseaux</h2>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/otis.thl/"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -482,12 +479,12 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Des Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">6 rue des davitaires 86550 Mignaloux-beauvoir</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+336 50 85 50 87</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">thielinotis@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
