--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
+    				<p><a href="images/THIELIN-Otis-CV.pdf" download="THIELIN-Otis-CV.pdf" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -354,9 +354,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<h2>Je suis<span>ouvert</span>aux offres d'emplois</h2>
+						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Embauchez moi</a></p>
 					</div>
 				</div>
 			</div>
@@ -426,7 +425,7 @@
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="submit" value="Envoyer un message" class="btn btn-primary py-3 px-5">
               </div>
             </form>
           
