--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		            </ul>
 		          </div>
 		        </div>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Télécharger mon CV</a></p>
+                <p><a href="images/THIELIN-Otis-CV.pdf" download="THIELIN-Otis-CV.pdf" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -354,8 +354,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>Je suis<span>ouvert</span>aux offres d'emplois</h2>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Embauchez moi</a></p>
+						<h2>Je suis <span>ouvert </span>aux offres d'emplois</h2>
+						<p><a href="images/THIELIN-Otis-CV.pdf" download="THIELIN-Otis-CV.pdf" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
 					</div>
 				</div>
 			</div>
