--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>CV</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Certifications</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Projets</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Documentation</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -250,9 +250,9 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h1 class="big big-2">Documentation</h1>
+            <h2 class="mb-4">Mes Documents</h2>
+            <p>Différents documents et travaux réalisés pendant mon BTS SIO</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -354,8 +354,6 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>Je suis <span>ouvert </span>aux offres d'emplois</h2>
-						<p><a href="images/THIELIN-Otis-CV.pdf" download="THIELIN-Otis-CV.pdf" class="btn btn-primary py-4 px-5">Télécharger mon CV</a></p>
 					</div>
 				</div>
 			</div>
