--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
         </div>
     		<div class="row">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="#">&amp; PIX</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
