--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">&amp; PIX</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="#">PIX</a></h3>
+	    					<span>Certification numérique</span>
 	    				</div>
     				</div>
   				</div>
