--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="#images/attestation anssi.pdf">ANSSI</a></h3>
+	    					<span>Certification cybersécurité</span>
 	    				</div>
     				</div>
   				</div>
