--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#images/attestation anssi.pdf">ANSSI</a></h3>
+	    					<h3><a href="images/attestation anssi.pdf">ANSSI</a></h3>
 	    					<span>Certification cybersécurité</span>
 	    				</div>
     				</div>
