--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">PIX</a></h3>
+	    					<h3><a href="images/attestation-pix-20230329.pdf">PIX</a></h3>
 	    					<span>Certification numérique</span>
 	    				</div>
     				</div>
@@ -203,11 +203,11 @@
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CNIL.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="images/customcert-report.pdf">CNIL</a></h3>
+	    					<span>Certification RGPD</span>
 	    				</div>
     				</div>
 
