--- a/index.html
+++ b/index.html
@@ -175,75 +175,72 @@
     </section>
  
     <section class="ftco-section ftco-project" id="projects-section">
-    	<div class="container">
-    		<div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Certifications</h1>
-            <h2 class="mb-4">Mes Certifications</h2>
-          </div>
-        </div>
-    		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="images/attestation-pix-20230329.pdf">PIX</a></h3>
-	    					<span>Certification numérique</span>
-	    				</div>
-    				</div>
-  				</div>
-  				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="images/attestation anssi.pdf">ANSSI</a></h3>
-	    					<span>Certification cybersécurité</span>
-	    				</div>
-    				</div>
-  				</div>
-
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CNIL.png);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="images/customcert-report.pdf">CNIL</a></h3>
-	    					<span>Certification RGPD</span>
-	    				</div>
-    				</div>
-
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-4">
-    				<div class="row">
-    					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
+		<div class="container">
+		  <div class="row justify-content-center pb-5">
+			<div class="col-md-12 heading-section text-center ftco-animate">
+			  <h1 class="big big-2">Certifications</h1>
+			  <h2 class="mb-4">Mes Certifications</h2>
+			</div>
+		  </div>
+		  <div class="row">
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/attestation-pix-20230329.pdf">PIX</a></h3>
+				  <span>Certification numérique</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/attestation-anssi.pdf">ANSSI</a></h3>
+				  <span>Certification cybersécurité</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CNIL.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/customcert-report.pdf">CNIL</a></h3>
+				  <span>Certification RGPD</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
+				  <span>Web Design</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
+				  <span>Web Design</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
+				  <span>Web Design</span>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+	  
 
 
     <section class="ftco-section" id="blog-section">
