--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ChatGPT_logo.svg.png);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-				  <span>Web Design</span>
+				  <h3><a href="images/chatgptpdf.pdf">ChatGPT</a></h3>
+				  <span>Certification Openclassroom : Utilisez ChatGPT pour améliorer votre productivité</span>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/intelligence-artificielle-et-conseil-1200x675.jpg);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-				  <span>Web Design</span>
+				  <h3><a href="images/ia.pdf">IA</a></h3>
+				  <span>Certification Openclassroom : Initiation à l'intelligence artificielle</span>
 				</div>
 			  </div>
 			</div>
