--- a/index.html
+++ b/index.html
@@ -240,73 +240,74 @@
 		  </div>
 		</div>
 	  </section>
-	  
 
-
-    <section class="ftco-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Documentation</h1>
-            <h2 class="mb-4">Mes Documents</h2>
-            <p>Différents documents et travaux réalisés pendant mon BTS SIO</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+	  <section class="ftco-section" id="blog-section">
+		<div class="container">
+		  <div class="row justify-content-center pb-5">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+				<h1 class="big big-2">Documentation</h1>
+				<h2 class="mb-4">Mes Documents</h2>
+				<p>Différents documents et travaux réalisés pendant mon BTS SIO</p>
+			  </div>
+		  </div>
+		  <div class="row">
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/attestation-pix-20230329.pdf">PIX</a></h3>
+				  <span>Certification numérique</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/attestation-anssi.pdf">ANSSI</a></h3>
+				  <span>Certification cybersécurité</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CNIL.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/customcert-report.pdf">CNIL</a></h3>
+				  <span>Certification RGPD</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ChatGPT_logo.svg.png);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/chatgptpdf.pdf">ChatGPT</a></h3>
+				  <span>Certification Openclassroom : Utilisez ChatGPT pour améliorer votre productivité</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/intelligence-artificielle-et-conseil-1200x675.jpg);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="images/ia.pdf">IA</a></h3>
+				  <span>Certification Openclassroom : Initiation à l'intelligence artificielle</span>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+				<div class="overlay"></div>
+				<div class="text text-center p-4">
+				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
+				  <span>Web Design</span>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
