--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/htmlcss.jpeg);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-				  <span>Web Design</span>
+				  <h3><a href="#">HTML5 et CSS3</a></h3>
+				  <span>Certification Openclassroom : Créez votre site web avec HTML5 et CSS3</span>
 				</div>
 			  </div>
 			</div>
