--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2023-2024</span>
-    					<h2>Art &amp; Statisticien</h2>
+    					<h2>Statisticien</h2>
     					<span class="position">PB86</span>
     					<p class="mt-4">Prise de données en temps réel lors des matchs professionnels du Poitiers Basket 86</p>
     				</div>
