Tableau de compétences

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 		  </div>
 		  <div class="row">
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PIX.png);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Carto-1.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/attestation-pix-20230329.pdf">PIX</a></h3>
-				  <span>Certification numérique</span>
+				  <h3><a href="images/Tableau de competence - Épreuve E4 -Thielin Otis.xlsx">Tableau de compétences</a></h3>
+				  <span>Tableau de synthèse des réalisations professionnelles</span>
 				</div>
 			  </div>
 			</div>
