--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Nom:</span> <span>Otis Thiélin</span></li>
 		            	<li class="d-flex"><span>Date de naissance:</span> <span>7 mars 2004</span></li>
-		            	<li class="d-flex"><span>Addresse:</span> <span>6 rue des davitaires 86550 Mignaloux-beauvoir</span></li>
+		            	<li class="d-flex"><span>Addresse:</span> <span>Mignaloux-Beauvoir</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>thielinotis@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>06 50 85 50 87</span></li>
 		            </ul>
@@ -426,7 +426,7 @@
             	<h2 class="ftco-heading-2">Des Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">6 rue des davitaires 86550 Mignaloux-beauvoir</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Mignaloux-Beauvoir</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+336 50 85 50 87</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">thielinotis@gmail.com</span></a></li>
 	              </ul>
