--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Carto-1.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/Tableau de competence - Épreuve E4 -Thielin Otis.xlsx">Tableau de compétences</a></h3>
+				  <h3><a href="images/Tableau-de-competence-Épreuve-E4-Thielin-Otis.pdf">Tableau de compétences</a></h3>
 				  <span>Tableau de synthèse des réalisations professionnelles</span>
 				</div>
 			  </div>
@@ -334,7 +334,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Addresse</h3>
-	            <p>6 rue des davitaires 86550 Mignaloux-beauvoir</p>
+	            <p>Mignaloux-Beauvoir</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
