--- a/index.html
+++ b/index.html
@@ -261,20 +261,24 @@
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logo_anssi.png);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/docker.jpg);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/attestation-anssi.pdf">ANSSI</a></h3>
-				  <span>Certification cybersécurité</span>
+				  <h3><a href="images/Documentations_cours_Fiche_de_procédure_Docker.pdf">Fiche de porcédure Docker</a></h3>
+				  <span>Compétences acquises :
+					Mettre à disposition des utilisateurs un service informatique
+					</span>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CNIL.png);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/PRA.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/customcert-report.pdf">CNIL</a></h3>
-				  <span>Certification RGPD</span>
+				  <h3><a href="images/PRA-Réponse-à-une-cyberattaque.pdf">PRA – Réponse à une cyberattaque</a></h3>
+				  <span>Compétences acquises :
+					Répondre aux incidents et aux demandes d’assistance et d’évolution
+					Mettre à disposition des utilisateurs un service informatique</span>
 				</div>
 			  </div>
 			</div>
