--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/htmlcss.jpeg);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="#">HTML5 et CSS3</a></h3>
+				  <h3><a href="images/htmlcss.pdf">HTML5 et CSS3</a></h3>
 				  <span>Certification Openclassroom : Créez votre site web avec HTML5 et CSS3</span>
 				</div>
 			  </div>
