--- a/index.html
+++ b/index.html
@@ -283,20 +283,22 @@
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ChatGPT_logo.svg.png);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ia\ domotique.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/chatgptpdf.pdf">ChatGPT</a></h3>
-				  <span>Certification Openclassroom : Utilisez ChatGPT pour améliorer votre productivité</span>
+				  <h3><a href="images/Veille technologique IA en domotique.pdf">Veille Informatique : L'IA en domotique </a></h3>
+				  <span>Compétences acquises :
+					Organiser son développement professionnel</span>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/intelligence-artificielle-et-conseil-1200x675.jpg);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ia\ vr\ medecine.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/ia.pdf">IA</a></h3>
-				  <span>Certification Openclassroom : Initiation à l'intelligence artificielle</span>
+				  <h3><a href="images/Veille technologique La VR en médecine.pdf">Veille Informatique : La VR en médecine</a></h3>
+				  <span>Compétences acquises :
+					Organiser son développement professionnel</span>
 				</div>
 			  </div>
 			</div>
