--- a/index.html
+++ b/index.html
@@ -303,11 +303,13 @@
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logobdd.webp);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-				  <span>Web Design</span>
+				  <h3><a href="images/Création de BDD.pdf">Création de BDD en MARIADB et PostgreSQL</a></h3>
+				  <span>Compétences acquises :
+					Gérer le patrimoine informatique
+					Mettre à disposition des utilisateurs un service informatique</span>
 				</div>
 			  </div>
 			</div>
