--- a/index.html
+++ b/index.html
@@ -313,6 +313,47 @@
 				</div>
 			  </div>
 			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logosymfony.webp);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/Création d'un Site Web avec Symfony.pdf">Création de sites Web Symfony</a></h3>
+					<span>Compétences acquises :
+						Travailler en mode projet</span>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logochabis.png);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/CAHIER DES CHARGES Chabis.pdf">Projet Chabis : rédaction du cahier des charges</a></h3>
+					<span>Compétences acquises :
+						Travailler en mode projet</span>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logochabis.png);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/mcd.png">Projet Chabis : création de schéma de base de données</a></h3>
+					<span>Compétences acquises :
+						Gérer le patrimoine informatique
+						Mettre à disposition des utilisateurs un service informatique</span>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/htmlcssphp.webp);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/Fiche de Procédure pour la Création de Sites Web avec HTML CSS et PHP.pdf">Création de Sites Web avec HTML CSS et PHP</a></h3>
+					<span>Compétences acquises :
+						Travailler en mode projet</span>
+				  </div>
+				</div>
+			  </div>        
 		  </div>
 		</div>
 	  </section>
