--- a/index.html
+++ b/index.html
@@ -353,7 +353,28 @@
 						Travailler en mode projet</span>
 				  </div>
 				</div>
-			  </div>        
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logowordpress.webp);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/wordpress.pdf">Création de Sites Web Wordpress</a></h3>
+					<span>Compétences acquises :
+						Travailler en mode projet</span>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logoportfolio.webp);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/Portfolio.pdf">Création de mon portfolio</a></h3>
+					<span>Compétences acquises :
+						Organiser son développement professionnel
+						Travailler en mode projet</span>
+				  </div>
+				</div>
+			  </div>                      
 		  </div>
 		</div>
 	  </section>
