--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 			  <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/docker.jpg);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-				  <h3><a href="images/Documentations_cours_Fiche_de_procédure_Docker.pdf">Fiche de porcédure Docker</a></h3>
+				  <h3><a href="images/Documentations_cours_Fiche_de_procédure_Docker.pdf">Fiche de procédure Docker</a></h3>
 				  <span>Compétences acquises :
 					Mettre à disposition des utilisateurs un service informatique
 					</span>
@@ -403,7 +403,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
           		</div>
-          		<h3 class="mb-4">Addresse</h3>
+          		<h3 class="mb-4">Adresse</h3>
 	            <p>Mignaloux-Beauvoir</p>
 	          </div>
           </div>
@@ -486,7 +486,7 @@
                 <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>À propos</a></li>
 				<li><a href="#resume-section"><span class="icon-long-arrow-right mr-2"><span>CV</span></a></li>
 				<li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"><span>Certifications</span></a></li>
-                <li><a href="#blog-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                <li><a href="#blog-section"><span class="icon-long-arrow-right mr-2"></span>Projets</a></li>
                 <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
