--- a/index.html
+++ b/index.html
@@ -374,7 +374,23 @@
 						Travailler en mode projet</span>
 				  </div>
 				</div>
-			  </div>                      
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/sosdatalogo.jpg);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/SosData.pdf">Stage première année : SOS Data</a></h3>
+				  </div>
+				</div>
+			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/logoalgos.jpeg);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="images/Algos.pdf">Stage seconde année : Algos</a></h3>
+				  </div>
+				</div>
+			  </div>                                             
 		  </div>
 		</div>
 	  </section>
