--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/karaokeleaguelogo.jpeg);">
 				  <div class="overlay"></div>
 				  <div class="text text-center p-4">
-					<h3><a href="#https://www.karaoke-league.fr/">Site web : Karaoke League</a></h3>
+					<h3><a href="https://www.karaoke-league.fr/">Site web : Karaoke League</a></h3>
 					<span>Site web créé durant mon stage chez Algos pour Karaoke League</span>
 				  </div>
 				</div>
