--- a/index.html
+++ b/index.html
@@ -431,6 +431,27 @@
             <h2 class="mb-4">Contactez moi</h2>
           </div>
         </div>
+		<div class="col-md-4">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/10stars.png);">
+			  <div class="overlay"></div>
+			  <div class="text text-center p-4">
+				<h3><a href="images/Cahier des charges 10Stars.pdf">Projet 10Stars : rédaction du cahier des charges</a></h3>
+				<span>Compétences acquises :
+					Travailler en mode projet</span>
+			  </div>
+			</div>
+		  </div>
+		  <div class="col-md-4">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/10stars.png);">
+			  <div class="overlay"></div>
+			  <div class="text text-center p-4">
+				<h3><a href="images/mcd10stars.pdf">Projet 10Stars : création de schéma de base de données</a></h3>
+				<span>Compétences acquises :
+					Gérer le patrimoine informatique
+					Mettre à disposition des utilisateurs un service informatique</span>
+			  </div>
+			</div>
+		  </div>
 
         <div class="row d-flex contact-info mb-5">
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -448,7 +469,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Numéro de téléphone</h3>
-	            <p><a href="tel://1234567920">+336 50 85 50 87</a></p>
+	            <p><a href="tel://33650855087">+336 50 85 50 87</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -457,7 +478,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Adresse Email</h3>
-	            <p><a href="mailto:info@yoursite.com">thielinotis@gmail.com</a></p>
+	            <p><a href="mailto:thielinotis@gmail.com">thielinotis@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
