--- a/index.html
+++ b/index.html
@@ -430,6 +430,16 @@
 				  </div>
 				</div>
 			  </div>
+			  <div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/linkedin.webp);">
+				  <div class="overlay"></div>
+				  <div class="text text-center p-4">
+					<h3><a href="https://www.linkedin.com/in/otis-thielin-5116b6260/">Linkedin</a></h3>
+					<span>Compétences acquises :
+						Organiser son développement professionnel</span>
+				  </div>
+				</div>
+			  </div>
 
 		  </div>
 		</div>
